--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,14 +28,7 @@
     <div class="main">
       <div class="landing-page">
         <div class="lado-1">
-          <h2
-            style="
-              font-size: 90px;
-              letter-spacing: 8px;
-              margin-bottom: 0px;
-              color: rgb(82, 210, 241);
-            "
-          >
+          <h2>
             D<span style="color: rgb(82, 210, 241)">O</span
             ><span style="color: rgb(255, 255, 255)">N</span
             ><span style="color: white">U</span><span style="color: white">T</span
@@ -63,6 +56,14 @@
         </div>
         <div class="lado-2">
           <img class="donut" src="img/donut.png" />
+        </div>
+        <div class="lado-3">
+          <img class="icon-item-redes" src="img/whatsapp.png" />
+          <img class="icon-item-redes" src="img/facebook.png" />
+          <img class="icon-item-redes" src="img/instagram.png" />
+          <img class="icon-item-redes" src="img/x.png" />
+
+
         </div>
       </div>
       <div class="donut-menu">
@@ -210,6 +211,8 @@
       <p>Mayara Duarte</p>
     </div>
     </footer>
+
+    <script src="/js/main.js"></script>
   </body>
 </html>
 
