--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%; 
+  max-width: 100vw; 
+
 }
 
 .logo {
@@ -33,8 +34,9 @@ nav ul {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  height: 90vh; 
-  width: 100vw; 
+  height: 100vh; 
+  max-height: 100vh; 
+  max-width: 100vw; 
   flex-wrap: wrap; 
   padding: 10px; 
   box-sizing: border-box; 
