--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ nav ul {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  height: 100vh; 
+  height: 95vh; 
   max-height: 100vh; 
   max-width: 100vw; 
   flex-wrap: wrap; 
@@ -49,21 +49,23 @@ nav ul {
   align-items: flex-start;
   margin: 0 5%;
   margin-bottom: 0;
-  max-width: 600px; /* Limita a largura máxima */
+  max-width: 600px; 
   text-align: left;
-  padding-top: 60px;
 }
 
 .lado-1 h2 {
-  font-size: calc(2.5em + 2vw); /* Escala a fonte com a largura da viewport */
-  letter-spacing: 0.5em;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 6vw;
+  letter-spacing: 0.2em;
+  margin-bottom: 10px;
+  text-align: left;
+  letter-spacing: 8px;
   color: rgb(82, 210, 241);
-  margin-bottom: 20px;
 }
 
 .lado-1 p {
   color: #fff;
-  font-size: calc(1em + 0.5vw); /* Escala a fonte com a largura da viewport */
+  font-size: calc(1em + 0.5vw); 
   margin: 10px 0;
 }
 
@@ -102,10 +104,8 @@ nav ul {
   width: 100%;
   max-width: 600px;
   height: auto;
-  filter: drop-shadow(8px 8px 10px rgba(34, 34, 34, 0.5)); /* Sombra suave e maior no lado direito e abaixo */
+  filter: drop-shadow(8px 8px 10px rgba(34, 34, 34, 0.5)); 
 }
-
-
 
 .lado-3 {
   display: flex;
@@ -122,18 +122,19 @@ nav ul {
   padding-bottom: 10px;
 }
 
-h2 {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 6vw; /* Responsivo baseado na largura da viewport */
-  letter-spacing: 0.2em; /* Ajusta o espaçamento entre letras */
-  margin-bottom: 10px;
-  text-align: left;
-  letter-spacing: 8px;
-  margin-bottom: 0px;
-  color: rgb(82, 210, 241);
+.favicon{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
+
+.menu-title{
+  font-family: "Edu VIC WA NT Beginner", cursive;
+  
+
+}
 
 nav li {
     margin-right: 2%;
