--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -59,10 +59,27 @@
         <img class="donut" src="img/donut.png" />
       </div>
       <div class="lado-3">
-        <img class="icon-item-redes" src="img/whatsapp.png" />
-        <img class="icon-item-redes" src="img/facebook.png" />
-        <img class="icon-item-redes" src="img/instagram.png" />
-        <img class="icon-item-redes" src="img/x.png" />
+<div class="parent">
+<div class="child child-1">
+  <button class="button btn-1">
+  <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512" fill="#1e90ff"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
+</button>
+</div>
+<div class="child child-2">
+  <button class="button btn-2">
+<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512" fill="#ff00ff"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg></button>
+</div>
+<div class="child child-3">
+  <button class="button ">
+    <svg width="30" height="30" class="whatsapp" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="whatsapp">
+      <path d="M19.001 4.908A9.817 9.817 0 0 0 11.992 2C6.534 2 2.085 6.448 2.08 11.908c0 1.748.458 3.45 1.321 4.956L2 22l5.255-1.377a9.916 9.916 0 0 0 4.737 1.206h.005c5.46 0 9.908-4.448 9.913-9.913A9.872 9.872 0 0 0 19 4.908h.001ZM11.992 20.15A8.216 8.216 0 0 1 7.797 19l-.3-.18-3.117.818.833-3.041-.196-.314a8.2 8.2 0 0 1-1.258-4.381c0-4.533 3.696-8.23 8.239-8.23a8.2 8.2 0 0 1 5.825 2.413 8.196 8.196 0 0 1 2.41 5.825c-.006 4.55-3.702 8.24-8.24 8.24Zm4.52-6.167c-.247-.124-1.463-.723-1.692-.808-.228-.08-.394-.123-.556.124-.166.246-.641.808-.784.969-.143.166-.29.185-.537.062-.247-.125-1.045-.385-1.99-1.23-.738-.657-1.232-1.47-1.38-1.716-.142-.247-.013-.38.11-.504.11-.11.247-.29.37-.432.126-.143.167-.248.248-.413.082-.167.043-.31-.018-.433-.063-.124-.557-1.345-.765-1.838-.2-.486-.404-.419-.557-.425-.142-.009-.309-.009-.475-.009a.911.911 0 0 0-.661.31c-.228.247-.864.845-.864 2.067 0 1.22.888 2.395 1.013 2.56.122.167 1.742 2.666 4.229 3.74.587.257 1.05.408 1.41.523.595.19 1.13.162 1.558.1.475-.072 1.464-.6 1.673-1.178.205-.58.205-1.075.142-1.18-.061-.104-.227-.165-.475-.29Z"></path>
+    </svg></button>
+</div>
+<div class="child child-4">
+  <button class="button btn-4">
+<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="#4267B2"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path></svg></button>
+</div>
+</div>
 
 
       </div>
@@ -71,15 +88,14 @@
       <h2 class="menu-title">CARDÁPIO</h2>
     </div>
     <div class="donut-cards">
-
-      <div class="donut-card">
+      
+      <div class="donut-card" data-id="1">
         <div class="img-menu" style="display:flex; justify-content: center;">
-          <img src="img/donut1.png" style="max-width: 100px" alt="Donut 1" />
+          <img src="img/donut1.png" alt="Donut 1" />
         </div>
         <div class="favorite">
-          <input style="display: none;" type="checkbox" id="favorite" name="favorite-checkbox"
-            value="favorite-button" />
-          <label for="favorite" class="container">
+          <input style="display: none;" type="checkbox" id="favorite-1" name="favorite-checkbox" value="1" />
+          <label for="favorite-1" class="container">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
               class="feather feather-heart">
@@ -91,6 +107,38 @@
         </div>
         <h3>Donut 1</h3>
         <p>Descrição do donut saboroso 1.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
+        <div class="div">
+          <button class="btn-add-to-cart">
+            <img class="icon-phone" src="img/compras.png" />
+          </button>
+          <div class="donut-quantity" style="display: none;">
+            <button class="btn-quantity btn-decrement">-</button>
+            <input type="text" class="quantity" value="1" readonly />
+            <button class="btn-quantity btn-increment">+</button>
+          </div>
+        </div>
+      </div>
+      
+      <div class="donut-card" data-donut-id="2">
+        <div class="img-menu" style="display:flex; justify-content: center;">
+          <img src="img/donut2.png" alt="Donut 2" />
+        </div>
+        <div class="favorite">
+          <input style="display: none;" type="checkbox" id="favorite2" name="favorite-checkbox" value="favorite-button" />
+          <label for="favorite2" class="favorite-label">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-heart">
+              <path
+                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+              </path>
+            </svg>
+          </label>
+        </div>
+        <h3>Donut 2</h3>
+        <p>Descrição do donut saboroso 2.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
         <div class="div">
           <button class="btn-add-to-cart" id="btnAddToCart">
             <img class="icon-phone" src="img/compras.png" />
@@ -103,8 +151,133 @@
         </div>
       </div>
 
+      <div class="donut-card" data-id="1">
+        <div class="img-menu" style="display:flex; justify-content: center;">
+          <img src="img/donut1.png" alt="Donut 1" />
+        </div>
+        <div class="favorite">
+          <input style="display: none;" type="checkbox" id="favorite-1" name="favorite-checkbox" value="1" />
+          <label for="favorite-1" class="container">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-heart">
+              <path
+                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+              </path>
+            </svg>
+          </label>
+        </div>
+        <h3>Donut 1</h3>
+        <p>Descrição do donut saboroso 1.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
+        <div class="div">
+          <button class="btn-add-to-cart">
+            <img class="icon-phone" src="img/compras.png" />
+          </button>
+          <div class="donut-quantity" style="display: none;">
+            <button class="btn-quantity btn-decrement">-</button>
+            <input type="text" class="quantity" value="1" readonly />
+            <button class="btn-quantity btn-increment">+</button>
+          </div>
+        </div>
+      </div>
+      
+      <div class="donut-card" data-donut-id="2">
+        <div class="img-menu" style="display:flex; justify-content: center;">
+          <img src="img/donut2.png" alt="Donut 2" />
+        </div>
+        <div class="favorite">
+          <input style="display: none;" type="checkbox" id="favorite2" name="favorite-checkbox" value="favorite-button" />
+          <label for="favorite2" class="favorite-label">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-heart">
+              <path
+                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+              </path>
+            </svg>
+          </label>
+        </div>
+        <h3>Donut 2</h3>
+        <p>Descrição do donut saboroso 2.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
+        <div class="div">
+          <button class="btn-add-to-cart" id="btnAddToCart">
+            <img class="icon-phone" src="img/compras.png" />
+          </button>
+          <div class="donut-quantity" style="display: none;">
+            <button class="btn-quantity btn-decrement">-</button>
+            <input type="text" class="quantity" value="1" readonly />
+            <button class="btn-quantity btn-increment">+</button>
+          </div>
+        </div>
+      </div>
+      <div class="donut-card" data-id="1">
+        <div class="img-menu" style="display:flex; justify-content: center;">
+          <img src="img/donut1.png" alt="Donut 1" />
+        </div>
+        <div class="favorite">
+          <input style="display: none;" type="checkbox" id="favorite-1" name="favorite-checkbox" value="1" />
+          <label for="favorite-1" class="container">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-heart">
+              <path
+                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+              </path>
+            </svg>
+          </label>
+        </div>
+        <h3>Donut 1</h3>
+        <p>Descrição do donut saboroso 1.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
+        <div class="div">
+          <button class="btn-add-to-cart">
+            <img class="icon-phone" src="img/compras.png" />
+          </button>
+          <div class="donut-quantity" style="display: none;">
+            <button class="btn-quantity btn-decrement">-</button>
+            <input type="text" class="quantity" value="1" readonly />
+            <button class="btn-quantity btn-increment">+</button>
+          </div>
+        </div>
+      </div>
+      
+      <div class="donut-card" data-donut-id="2">
+        <div class="img-menu" style="display:flex; justify-content: center;">
+          <img src="img/donut2.png" alt="Donut 2" />
+        </div>
+        <div class="favorite">
+          <input style="display: none;" type="checkbox" id="favorite2" name="favorite-checkbox" value="favorite-button" />
+          <label for="favorite2" class="favorite-label">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+              class="feather feather-heart">
+              <path
+                d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z">
+              </path>
+            </svg>
+          </label>
+        </div>
+        <h3>Donut 2</h3>
+        <p>Descrição do donut saboroso 2.</p>
+        <h3 style="color: #cc7f91">R$: 5,00</h3>
+        <div class="div">
+          <button class="btn-add-to-cart" id="btnAddToCart">
+            <img class="icon-phone" src="img/compras.png" />
+          </button>
+          <div class="donut-quantity" style="display: none;">
+            <button class="btn-quantity btn-decrement">-</button>
+            <input type="text" class="quantity" value="1" readonly />
+            <button class="btn-quantity btn-increment">+</button>
+          </div>
+        </div>
+      </div>
 
+    
+ 
     </div>
+    
     <div class="form">
       <div class="form-donut">
         <form method="post" action="/pedido">
@@ -130,7 +303,7 @@
             <button class="btn-quantity btn-increment">+</button>
           </div>
           <h3>Total: R$ <span id="totalPrice" style="color: #cc7f91">00,00</span></h3>
-          <button class="btn " style="border: none;">Fazer pedido</button>
+          <button class="btn " style="border: none;">Adicionar no carrinho</button>
         </form>
       </div>
       </section>
@@ -143,7 +316,7 @@
       <p>Telefone: (11) 1234-5678</p>
     </div>
     <div class="icons-footer">
-      <p>Nosso instagram:</p>
+      <p>Nossas Redes:</p>
 
       <div class="social-buttons">
         <a href="#" class="social-button instagram">
@@ -162,6 +335,34 @@
             </g>
           </svg>
         </a>
+
+        <div class="social-buttons">
+          <!-- WhatsApp Button -->
+          <a href="#" class="social-button whatsapp">
+            <svg  viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.001 4.908A9.817 9.817 0 0 0 11.992 2C6.534 2 2.085 6.448 2.08 11.908c0 1.748.458 3.45 1.321 4.956L2 22l5.255-1.377a9.916 9.916 0 0 0 4.737 1.206h.005c5.46 0 9.908-4.448 9.913-9.913A9.872 9.872 0 0 0 19 4.908h.001ZM11.992 20.15A8.216 8.216 0 0 1 7.797 19l-.3-.18-3.117.818.833-3.041-.196-.314a8.2 8.2 0 0 1-1.258-4.381c0-4.533 3.696-8.23 8.239-8.23a8.2 8.2 0 0 1 5.825 2.413 8.196 8.196 0 0 1 2.41 5.825c-.006 4.55-3.702 8.24-8.24 8.24Zm4.52-6.167c-.247-.124-1.463-.723-1.692-.808-.228-.08-.394-.123-.556.124-.166.246-.641.808-.784.969-.143.166-.29.185-.537.062-.247-.125-1.045-.385-1.99-1.23-.738-.657-1.232-1.47-1.38-1.716-.142-.247-.013-.38.11-.504.11-.11.247-.29.37-.432.126-.143.167-.248.248-.413.082-.167.043-.31-.018-.433-.063-.124-.557-1.345-.765-1.838-.2-.486-.404-.419-.557-.425-.142-.009-.309-.009-.475-.009a.911.911 0 0 0-.661.31c-.228.247-.864.845-.864 2.067 0 1.22.888 2.395 1.013 2.56.122.167 1.742 2.666 4.229 3.74.587.257 1.05.408 1.41.523.595.19 1.13.162 1.558.1.475-.072 1.464-.6 1.673-1.178.205-.58.205-1.075.142-1.18-.061-.104-.227-.165-.475-.29Z"></path>
+            </svg>
+          </a>
+        
+          <!-- Facebook Button -->
+          <a href="#" class="social-button facebook">
+            <svg  viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 2C6.48 2 2 6.48 2 12c0 4.3 2.88 7.9 6.68 9.09v-6.41H7.89v-2.48h2.79V9.62c0-2.77 1.64-4.27 4.06-4.27 1.17 0 2.18.09 2.48.13v2.89h-1.71c-1.34 0-1.6.64-1.6 1.58v2.07h3.2l-.42 2.48h-2.78v6.43C17.12 19.9 20 16.3 20 12c0-5.52-4.48-10-10-10z"></path>
+            </svg>
+          </a>
+        
+          <!-- X (formerly Twitter) Button -->
+          <a href="#" class="social-button x">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+              <path d="M8 2H1L9.26086 13.0145L1.44995 21.9999H4.09998L10.4883 14.651L16 22H23L14.3917 10.5223L21.8001 2H19.1501L13.1643 8.88578L8 2ZM17 20L5 4H7L19 20H17Z"></path>
+            </svg>
+          </a>
+        </div>
+        
+        
+                
+      
+  </div>
       </div>
     </div>
     <div class="icons-footer">
